# terragrunt-dag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  deny.toml  updatecli-compose.yaml
.github/workflows/: ci.yml  example-gha-matrix.yml  publish.yml  release.yml  updatecli.yaml
benches/: benchmarks.rs
src/: changes.rs  cycle.rs  discovery.rs  hcl_eval.rs  lib.rs  main.rs  output.rs  parser.rs  processor.rs  project.rs  resolver.rs  stack.rs
tests/: cli_test.rs  cycle_test.rs  integration_test.rs
tests/fixtures/integration/empty_terraform_block_project/: terragrunt.hcl
tests/fixtures/mixed_live_and_stack/_modules/consumer/: main.tf
tests/fixtures/mixed_live_and_stack/_modules/oauth/: main.tf
tests/fixtures/parser/dependencies_empty/: terragrunt.hcl
tests/fixtures/parser/dependencies_multiple/: terragrunt.hcl
tests/fixtures/parser/dependencies_single/: terragrunt.hcl
tests/fixtures/parser/include_find_in_parent_folders_with_arg/: terragrunt.hcl
tests/fixtures/parser/include_literal/: terragrunt.hcl
tests/fixtures/parser/include_multiple/: terragrunt.hcl
tests/fixtures/parser/include_template_expr/: terragrunt.hcl
tests/fixtures/parser/include_with_dependencies/: terragrunt.hcl
tests/fixtures/parser/locals_deeply_nested/: terragrunt.hcl
tests/fixtures/parser/locals_file/: terragrunt.hcl
tests/fixtures/parser/locals_multiple_functions/: terragrunt.hcl
tests/fixtures/parser/locals_nested_function_calls/: terragrunt.hcl
tests/fixtures/parser/locals_no_file_functions/: terragrunt.hcl
tests/fixtures/parser/locals_read_terragrunt_config/: terragrunt.hcl
tests/fixtures/parser/locals_read_tfvars_file/: terragrunt.hcl
tests/fixtures/parser/locals_sops_decrypt_file/: terragrunt.hcl
tests/fixtures/parser/locals_with_other_blocks/: terragrunt.hcl
tests/fixtures/parser/mixed_dependency_types/: terragrunt.hcl
tests/fixtures/parser/terraform_git_source/: terragrunt.hcl
tests/fixtures/parser/terraform_github_source/: terragrunt.hcl
tests/fixtures/parser/terraform_local_source_absolute/: terragrunt.hcl
tests/fixtures/parser/terraform_no_source/: terragrunt.hcl
tests/fixtures/parser/terraform_tfr_source/: terragrunt.hcl
tests/fixtures/parser/terraform_with_other_blocks/: terragrunt.hcl
tests/fixtures/processor/cascade/with_watch_files/: config.yaml  data.yaml
tests/fixtures/processor/cycle_test/a/: terragrunt.hcl
tests/fixtures/processor/empty_no_terraform/: terragrunt.hcl
tests/fixtures/processor/empty_terraform_block/: terragrunt.hcl
tests/fixtures/processor/has_terraform_source/: terragrunt.hcl
tests/fixtures/processor/with_circular_reference/: a.hcl  b.hcl
tests/fixtures/processor/with_include_deps/: root.hcl
tests/fixtures/processor/with_nested_read_config/: base.hcl  env.hcl
tests/fixtures/processor/with_read_terragrunt_config/: common.hcl
tests/fixtures/resolver/: .gitboundary
updatecli/values.d/: scm.yaml  updatecli-compose.yaml
(+57 files in other folders)
