
[[bench]]
  harness = false
  name = "benchmarks"

[dependencies]
  glob = "0.3.3"
  hcl-rs = "0.19.6"
  rayon = "1.11.0"
  serde_json = "1.0.149"
  serde_yaml = "0.9.34+deprecated"
  thiserror = "2.0.18"
  walkdir = "2.5.0"

  [dependencies.camino]
    features = ["serde1"]
    version = "1.2.2"

  [dependencies.clap]
    features = ["derive"]
    version = "4.6.0"

  [dependencies.dashmap]
    features = ["rayon"]
    version = "6.1.0"

  [dependencies.serde]
    features = ["derive"]
    version = "1.0.228"

[dev-dependencies]
  rstest = "0.26.1"
  serde_json = "1.0.145"
  tempfile = "3.23.0"

  [dev-dependencies.criterion]
    features = ["html_reports"]
    version = "0.8.1"

[package]
  edition = "2024"
  name = "terragrunt-dag"
  version = "0.2.0"
