
[[bench]]
  harness = false
  name = "benchmarks"

[dependencies]
  glob = "0.3.3"
  hcl-rs = "0.19.6"
  rayon = "1.11.0"
  serde_json = "1.0.149"
  serde_yaml_ng = "0.10.0"
  thiserror = "2.0.18"
  walkdir = "2.5.0"

  [dependencies.camino]
    features = ["serde1"]
    version = "1.2.2"

  [dependencies.clap]
    features = ["derive"]
    version = "4.6.0"

  [dependencies.dashmap]
    features = ["rayon"]
    version = "6.2.1"

  [dependencies.serde]
    features = ["derive"]
    version = "1.0.228"

[dev-dependencies]
  rstest = "0.26.1"
  serde_json = "1.0.149"
  tempfile = "3.27.0"

  [dev-dependencies.criterion]
    features = ["html_reports"]
    version = "0.8.2"

[package]
  categories = ["command-line-utilities", "development-tools::build-utils"]
  description = "Walk a Terragrunt monorepo and emit CI matrix configuration (Atlantis, Digger, GitHub Actions)"
  edition = "2024"
  exclude = [
    "tests/fixtures/**",
    ".github/**",
    "updatecli/**",
    "updatecli-compose.yaml",
    ".pre-commit-config.yaml",
    ".gitattributes",
  ]
  homepage = "https://github.com/postula/terragrunt-dag"
  keywords = ["terragrunt", "terraform", "dag", "ci", "atlantis"]
  license = "AGPL-3.0-or-later"
  name = "terragrunt-dag"
  readme = "README.md"
  repository = "https://github.com/postula/terragrunt-dag"
  rust-version = "1.91.1"
  version = "0.4.0"
